--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,6 +9,7 @@ target 'ReactNativeAppCenter' do
   pod 'AppCenter/Crashes', '~> 1.6.0'
   pod 'AppCenter/Analytics', '~> 1.6.0'
   pod 'AppCenterReactNativeShared', '~> 1.5.0'
+  pod 'AppCenter/Distribute'
 
   platform :ios, '9.0'
   target 'ReactNativeAppCenterTests' do
